made the index page look a lot better!

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,11 @@
+.index-bg {
+  background-color: #589cf4;
+}
+
+.title {
+  font-family: Helvetica;
+}
+
 .difficulty-container {
   border-radius: 2rem;
 }
