--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,11 @@
 .canvas {
   /* The reason why we are adding 16px 2 times to the 800px
    * is because the bootstrap "col" class adds 16px padding horizontally on each side
-   * */
+   */
   max-width: calc(12px + 800px + 12px);
+}
+
+canvas {
+  /* Looks nicier! */
+  border-radius: 1%;
 }
