--- a/templates/game.html
+++ b/templates/game.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- Our own custom made css -->
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="../static/css/main.css" rel="stylesheet">
     <title>Game - Chess AI</title>
   </head>
   <body class="index-bg">
@@ -24,8 +24,8 @@
     <!-- p5.js JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
     <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
-    <script src="../js/piece.js"></script>
-    <script src="../js/board.js"></script>
-    <script src="../js/sketch.js"></script>
+    <script src="../static/js/piece.js"></script>
+    <script src="../static/js/board.js"></script>
+    <script src="../static/js/sketch.js"></script>
   </body>
 </html>
