--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- Our own custom made css -->
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="../static/css/main.css" rel="stylesheet">
     <title>Home - Chess AI</title>
   </head>
   <body class="index-bg">
@@ -23,12 +23,12 @@
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
+          <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot">
         </div>
         <div class="col-12 col-md-2 align-self-center offset-md-3">
           <div class="d-grid gap-2">
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="./game_setup.html">start</a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./videnskaben.html">videnskaben</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="{{ url_for('game_setup') }}">start</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="{{ url_for('science') }}">videnskaben</a>
             <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="https://www.chess.com/da/skak-regler" target="_blank">regler</a>          
           </div>
         </div>
