--- a/templates/game.html
+++ b/templates/game.html
@@ -1,31 +1,18 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
+{% block title %}Game{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+{% block content %}
+  <div class="row justify-content-center mt-5">
+    <main class="col canvas">
+    </main>
+  </div>
+{% endblock %}
 
-    <!-- Our own custom made css -->
-    <link href="../static/css/main.css" rel="stylesheet">
-    <title>Game - Chess AI</title>
-  </head>
-  <body class="index-bg">
-    <div class="container">
-      <div class="row justify-content-center mt-5">
-        <main class="col canvas">
-        </main>
-      </div>
-    </div>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <!-- p5.js JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
-    <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
-    <script src="../static/js/piece.js"></script>
-    <script src="../static/js/board.js"></script>
-    <script src="../static/js/sketch.js"></script>
-  </body>
-</html>
+{% block scripts %}
+  <!-- p5.js JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+  <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
+  <script src="../static/js/piece.js"></script>
+  <script src="../static/js/board.js"></script>
+  <script src="../static/js/sketch.js"></script>
+{% endblock %}
