--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -1,127 +1,113 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
+{% block title %}Game Setup{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <!-- Our own custom made css -->
-    <link href="../static/css/main.css" rel="stylesheet">
-    <title>Game Setup - Chess AI</title>
-  </head>
-  <body class="index-bg">
-    <div class="container">
-      <div class="row my-5">
-        <div class="col">
-          <h1 class="text-center text-white">Game Setup</h1>
-        </div>
-      </div>
-      <form action="#" method="POST">
-        <div class="row justify-content-center">
-          <div class="col-8">
-            <div class="card difficulty-container shadow-lg px-3">
-              <div class="card-body">
-                <h4 class="card-title text-center mb-3">Sværhedsgrad</h4>
-                <div class="row">
-                  <div class="col">
-                    <span class="badge rounded-pill p-4" id="difficulty-form-badge">
-                      <div class="row justify-content-between">
-                        <div class="col-1">
-                          <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
-                        </div>
-                        <div class="col-10">
-                          <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
-                        </div>
-                        <div class="col-1">
-                          <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
-                        </div>
-                      </div>
-                    </span>
-                  </div>
-                </div>
-                <div class="row mt-3 mb-1">
-                  <div class="col">
-                    <div class="form-check form-switch text-center">
-                      <label class="form-check-label" for="black-or-white-switch">
-                        Her skal du vælge om du vil være sort eller hvid
-                      </label>
+{% block content %}
+  <div class="row my-5">
+    <div class="col">
+      <h1 class="text-center text-white">game setup</h1>
+    </div>
+  </div>
+  <form action="#" method="POST">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <div class="card difficulty-container shadow-lg px-3">
+          <div class="card-body">
+            <h4 class="card-title text-center mb-3">Sværhedsgrad</h4>
+            <div class="row">
+              <div class="col">
+                <span class="badge rounded-pill p-4" id="difficulty-form-badge">
+                  <div class="row justify-content-between">
+                    <div class="col-1">
+                      <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
+                    </div>
+                    <div class="col-10">
+                      <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
+                    </div>
+                    <div class="col-1">
+                      <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
                     </div>
                   </div>
+                </span>
+              </div>
+            </div>
+            <div class="row mt-3 mb-1">
+              <div class="col">
+                <div class="form-check form-switch text-center">
+                  <label class="form-check-label" for="black-or-white-switch">
+                    Her skal du vælge om du vil være sort eller hvid
+                  </label>
                 </div>
-                <div class="row justify-content-center">
-                  <div class="col-1">
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="black-or-white-switch">
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-1">
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="black-or-white-switch">
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="row mt-5">
-          <div class="col text-center">
-            <!--<button type="submit" class="btn btn-primary btn-lg">Begynd Spil</button>-->
-            <a class="btn btn-primary" href="{{ url_for('game') }}" role="button">Begynd Spil</a>
-          </div>
-        </div>
-        <div class="row mt-3">
-          <div class="col text-center">
-            <a class="btn btn-primary" href="{{ url_for('home') }}" role="button">Vend Tilbage</a>
-      </form>
+      </div>
     </div>
+    <div class="row mt-5">
+      <div class="col text-center">
+        <a class="btn btn-primary" href="{{ url_for('game') }}" role="button">Begynd Spil</a>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col text-center">
+        <a class="btn btn-primary" href="{{ url_for('home') }}" role="button">Vend Tilbage</a>
+      </div>
+    </div>
+  </form>
+{% endblock %}
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script>
-      // Setup and retrieve the proper html elements
-      const difficultyFormEl = document.getElementById("difficulty");
-      const difficultyFormBadgeEl = document.getElementById("difficulty-form-badge");
+{% block scripts %}
+  <script>
+    // Setup and retrieve the proper html elements
+    const difficultyFormEl = document.getElementById("difficulty");
+    const difficultyFormBadgeEl = document.getElementById("difficulty-form-badge");
 
-      const leftArrow = document.getElementById("left-arrow");
-      const rightArrow = document.getElementById("right-arrow");
+    const leftArrow = document.getElementById("left-arrow");
+    const rightArrow = document.getElementById("right-arrow");
 
-      const switchToggle = document.getElementById("black-or-white-switch");
+    const switchToggle = document.getElementById("black-or-white-switch");
 
-      const upperLimit = 6;
+    const upperLimit = 6;
 
 
-      const setProperBadgeColor = function(rangeVal) {
-        const Red = 255 * (rangeVal / upperLimit);
-        const Green = 255 - (255 * (rangeVal / upperLimit));
-        const Blue = 0;
+    const setProperBadgeColor = function(rangeVal) {
+      const Red = 255 * (rangeVal / upperLimit);
+      const Green = 255 - (255 * (rangeVal / upperLimit));
+      const Blue = 0;
 
-        difficultyFormBadgeEl.style.background = `rgb(${Red}, ${Green}, ${Blue})`;
-      }
+      difficultyFormBadgeEl.style.background = `rgb(${Red}, ${Green}, ${Blue})`;
+    }
 
-      // Setup the colors the first time!
-      setProperBadgeColor(0);
+    // Setup the colors the first time!
+    setProperBadgeColor(0);
 
-      // Here we register an event listener to the range form input tag,
-      // to capture the difficulty level the user has specified.
-      difficultyFormEl.addEventListener("input", function(event) {
-        setProperBadgeColor(event.target.value);
-      });
+    // Here we register an event listener to the range form input tag,
+    // to capture the difficulty level the user has specified.
+    difficultyFormEl.addEventListener("input", function(event) {
+      setProperBadgeColor(event.target.value);
+    });
 
-      leftArrow.addEventListener("click", function() {
-        difficultyFormEl.value = parseInt(difficultyFormEl.value) - 1;
-        setProperBadgeColor(difficultyFormEl.value);
-      });
+    leftArrow.addEventListener("click", function() {
+      difficultyFormEl.value = parseInt(difficultyFormEl.value) - 1;
+      setProperBadgeColor(difficultyFormEl.value);
+    });
 
-      rightArrow.addEventListener("click", function() {
-        difficultyFormEl.value = parseInt(difficultyFormEl.value) + 1;
-        setProperBadgeColor(difficultyFormEl.value);
-      });
+    rightArrow.addEventListener("click", function() {
+      difficultyFormEl.value = parseInt(difficultyFormEl.value) + 1;
+      setProperBadgeColor(difficultyFormEl.value);
+    });
 
-      switchToggle.addEventListener("change", function() {
-        if (this.checked) switchToggle.classList.add("checked-switch-background");
-        else switchToggle.classList.remove("checked-switch-background");
-      });
+    switchToggle.addEventListener("change", function() {
+      if (this.checked) switchToggle.classList.add("checked-switch-background");
+      else switchToggle.classList.remove("checked-switch-background");
+    });
 
-    </script>
-  </body>
-</html>
+  </script>
+{% endblock %}
