--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,24 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <!-- Our own custom made css -->
-    <link href="../static/css/main.css" rel="stylesheet">
-    <title>Home - Chess AI</title>
-  </head>
-  <body class="index-bg">
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col">
-          <h1 class="title fst-italic text-danger d-inline">Chess</h1>
-          <h1 class="title fst-italic text-primary d-inline">Cog</h1>
-          <h1 class="title fst-italic text-white d-inline">Increaser</h1>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot">
-        </div>
-        <div class="col-12 col-md-2 align-self-center offset-md-3">
-          <div class="d-grid gap-2">
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="{{ url_for('game_setup') }}">start</a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="{{ url_for('science') }}">videnskaben</a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="https://www.chess.com/da/skak-regler" target="_blank">regler</a>          
-          </div>
-        </div>
+{% block content %}
+  <div class="row mt-5">
+    <div class="col">
+      <h1 class="title fst-italic text-danger d-inline">Chess</h1>
+      <h1 class="title fst-italic text-primary d-inline">Cog</h1>
+      <h1 class="title fst-italic text-white d-inline">Increaser</h1>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-6">
+      <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot">
+    </div>
+    <div class="col-12 col-md-2 align-self-center offset-md-3">
+      <div class="d-grid gap-2">
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="{{ url_for('game_setup') }}">start</a>
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase text-white" role="button" href="{{ url_for('science') }}">videnskaben</a>
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase text-white" role="button" href="https://www.chess.com/da/skak-regler" target="_blank">regler</a>
       </div>
     </div>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  </body>
-</html>
+  </div>
+{% endblock %}
