Opdatering af GUI på game_setup.html

--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -4,15 +4,15 @@
 {% block content %}
   <div class="row my-5">
     <div class="col">
-      <h1 class="text-center text-white">game setup</h1>
+      <h1 class="text-center text-white">Game setup</h1>
     </div>
   </div>
   <form action="#" method="POST">
     <div class="row justify-content-center">
-      <div class="col-8">
+      <div class="col-8">   
         <div class="card difficulty-container shadow-lg px-3">
-          <div class="card-body">
-            <h4 class="card-title text-center mb-3">Sværhedsgrad</h4>
+          <div class="card-body pb-5">
+            <h4 class="card-title text-center mb-3">Set difficulty</h4>
             <div class="row">
               <div class="col">
                 <span class="badge rounded-pill p-4" id="difficulty-form-badge">
@@ -33,8 +33,8 @@
             <div class="row mt-3 mb-1">
               <div class="col">
                 <div class="form-check form-switch text-center">
-                  <label class="form-check-label" for="black-or-white-switch">
-                    Her skal du vælge om du vil være sort eller hvid
+                  <label class="form-check-label mb-1" for="black-or-white-switch">
+                    <b>Her skal du vælge om du vil være sort eller hvid</b>
                   </label>
                 </div>
               </div>
