--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,6 +29,25 @@
   max-width: calc(12px + 800px + 12px);
 }
 
+/* Dette er for at ændre størrelsen på form-check-input  */
+#black-or-white-switch{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  transform: scale(1.5);
+  padding: 10px;
+}
+
+/* Might want to wrap a span around your checkbox text */
+.checkboxtext
+{
+  /* Checkbox text */
+  font-size: 110%;
+  display: inline;
+}
+
 canvas {
   /* Looks nicier! */
   border-radius: 1%;
