--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row mt-5">
     <div class="col-6">
-      <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot">
+      <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot" width="500" height="auto">
     </div>
     <div class="col-12 col-md-2 align-self-center offset-md-3">
       <div class="d-grid gap-2">
