Opdatering af href til skak regler

--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -36,6 +36,8 @@
                 <div class="form-check form-switch text-center">
                   <label class="form-check-label mb-1" for="black-or-white-switch">
                     <b>Choose between playing as black or white by clicking this switch</b>
+                    <br>
+                    <b>If you don't understand this part please read this <a href="https://www.chess.com/learn-how-to-play-chess">start rules</a><div id="set-up-chess-board"></div></b>
                   </label>
                 </div>
               </div>
