--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     </div>
     <div class="col-12 col-md-2 align-self-center offset-md-3">
       <div class="d-grid gap-2">
-        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="{{ url_for('game_setup') }}">start</a>
-        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase text-white" role="button" href="{{ url_for('science') }}">videnskaben</a>
-        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase text-white" role="button" href="https://www.chess.com/da/skak-regler" target="_blank">regler</a>
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="{{ url_for('game_setup') }}">Start</a>
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase text-white" role="button" href="{{ url_for('science') }}">The Science</a>
+        <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase text-white" role="button" href="https://www.chess.com/learn-how-to-play-chess" target="_blank">the rules</a>
       </div>
     </div>
   </div>
