--- a/templates/videnskaben.html
+++ b/templates/videnskaben.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
-{% block title %}Videnskaben{% endblock %}
+{% block title %}The Science{% endblock %}
 
 {% block content %}
-  <div class="row">
+<form action="#" method="POST">
+  <div class="row justify-content-center">
     <div class="col">
       <h1>Here we explain the actual science behind the chess AI</h1>
     </div>
@@ -12,4 +13,5 @@
       <a class="btn btn-secondary" role="button" href="#">Lool</a>
     </div>
   </div>
+</form>
 {% endblock %}
