--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -2,14 +2,15 @@
 {% block title %}Game Setup{% endblock %}
 
 {% block content %}
+<center>
+<br>
+<img src="../static/images/neuro-solutions-small-white.png" alt="brand-logo" width="300" height="auto">
+</center>
 <div class="row my-5">
 <form action="#" method="POST">
   <div class="row justify-content-center">
     <div class="col-7">
       <div class="row text-center">
-        <titel class="title fs-1 fst-italic text-danger d-inline">Chess<span class="title fst-italic text-primary d-inline">Cog</span><span class="title fst-italic text-white d-inline">Increaser</span></titel>
-      </div>
-      <br>
       <div class="card difficulty-container shadow-lg px-3">
         <div class="card-body pb-5">
           <h4 class="card-title text-center">Settings - Set AI difficulty</h4>
