--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,14 @@
 
 {% block content %}
   <div class="row mt-5">
-    <div class="col">
-      <h1 class="title fst-italic text-danger d-inline">Chess</h1>
-      <h1 class="title fst-italic text-primary d-inline">Cog</h1>
-      <h1 class="title fst-italic text-white d-inline">Increaser</h1>
-    </div>
-  </div>
-  <div class="row mt-5">
+    <div class="row mt-5">
+      <div class="row mt-5">
+        <div class="row mt-5">
+          <div class="row mt-5">
+            <div class="row mt-5">
+
     <div class="col-6">
-      <img src="../static/images/presentation-img.png" alt="a women playing chess against a robot" width="500" height="auto">
+    <img src="../static/images/neuro-solutions-white.png" alt="brand-logo" width="750" height="auto">
     </div>
     <div class="col-12 col-md-2 align-self-center offset-md-3">
       <div class="d-grid gap-2">
