--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -7,7 +7,7 @@
 <img src="../static/images/neuro-solutions-small-white.png" alt="brand-logo" width="300" height="auto">
 </center>
 <div class="row my-5">
-<form action="#" method="POST">
+<form method="POST">
   <div class="row justify-content-center">
     <div class="col-7">
       <div class="row text-center">
@@ -23,7 +23,7 @@
                       <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
                     </div>
                     <div class="col-10">
-                      <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
+                      <input value="0" id="difficulty" type="range" name="difficulty" class="form-range" min="0" max="6">
                     </div>
                     <div class="col-1">
                       <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
@@ -49,7 +49,7 @@
               <div class="col-1">
                 <div class="form-check form-switch">
                   <br>
-                  <input class="form-check-input" type="checkbox" id="black-or-white-switch">
+                  <input class="form-check-input" name="blackOrWhite" type="checkbox" id="black-or-white-switch">
                 </div>
               </div>
             </div>
@@ -58,8 +58,10 @@
           </div>
           <div class="row mt-3">
             <div class="col text-center">
-              <a class="px-4 fs-2 text-decoration-none badge rounded-pill bg-primary text-uppercase text-white"
-                href="{{ url_for('game') }}" role="button">Start Game</a>
+              <button 
+                type="submit" 
+                class="btn px-4 fs-2 badge rounded-pill bg-primary text-uppercase text-white"
+              >Start Game</button>
             </div>
           </div>
           <div class="row mt-3">
