huge update but still not finishedgit add .git add . ♟

--- a/templates/game.html
+++ b/templates/game.html
@@ -11,6 +11,8 @@
 {% block scripts %}
   <!-- p5.js JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+  <!-- js-cookie JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
   <script src="../static/js/piece.js"></script>
   <script src="../static/js/board.js"></script>
