Opdatering af game.html & MouseActivity

--- a/templates/game.html
+++ b/templates/game.html
@@ -4,6 +4,17 @@
 {% block content %}
   <div class="row justify-content-center mt-5">
     <main class="col canvas">
+
+      <div class="card" id="game-status-message" style="width: 18rem;">
+        <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">The winner is: </h5>
+            <p class="card-text">The winner is white! </p>
+            <a href="#" class="btn btn-primary">New game</a>
+            <a href="#" class="btn btn-primary">Return home</a>
+        </div>
+      </div>
+
     </main>
   </div>
 {% endblock %}
@@ -17,4 +28,5 @@
   <script src="../static/js/piece.js"></script>
   <script src="../static/js/board.js"></script>
   <script src="../static/js/sketch.js"></script>
+  <script src="../static/js/MouseActivty.js"></script>
 {% endblock %}
