--- a/templates/game.html
+++ b/templates/game.html
@@ -20,10 +20,12 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
   <!-- js-cookie JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+  <!-- Lodash JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
   <script src="../static/js/Piece.js"></script>
   <script src="../static/js/Board.js"></script>
   <script src="../static/js/AI.js"></script>
-  <script src="../static/js/MouseActivity.js"></script>
   <script src="../static/js/GameController.js"></script>
+  <script src="../static/js/MouseActivity.js"></script>
 {% endblock %}
