minimax now works!

--- a/templates/game.html
+++ b/templates/game.html
@@ -25,7 +25,7 @@
   <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
   <script src="../static/js/Piece.js"></script>
   <script src="../static/js/Board.js"></script>
-  <script src="../static/js/AI.js"></script>
+  <script src="../static/js/SimulationBoard.js"></script>
   <script src="../static/js/GameController.js"></script>
   <script src="../static/js/MouseActivity.js"></script>
 {% endblock %}
