--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -23,7 +23,7 @@
                       <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
                     </div>
                     <div class="col-10">
-                      <input value="0" id="difficulty" type="range" name="difficulty" class="form-range" min="0" max="6">
+                      <input value="1" id="difficulty" type="range" name="difficulty" class="form-range" min="1" max="6">
                     </div>
                     <div class="col-1">
                       <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
@@ -40,7 +40,7 @@
                   <p class="mb-1">
                     <b>Choose between playing as black or white by clicking this switch</b>
                     <br>
-                    <b>If you don't understand this part please read this <a href="https://www.chess.com/learn-how-to-play-chess">start rules</a><div id="set-up-chess-board"></div></b>
+                    <b>If you don't understand this part please read the <a href="https://www.chess.com/learn-how-to-play-chess">start rules</a><div id="set-up-chess-board"></div></b>
                   </p>
                 </div>
               </div>
