--- a/templates/game.html
+++ b/templates/game.html
@@ -4,6 +4,9 @@
 {% block content %}
   <div class="row justify-content-center mt-5">
     <main class="col canvas">
+      <div class="spinner-border text-dark mx-auto invisible" id="computer-loading-spinner" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
       <div class="card mx-auto invisible" id="game-status-message">
         <div class="card-body text-center">
           <h5 class="card-title">The winner is</h5>
