--- a/templates/game_setup.html
+++ b/templates/game_setup.html
@@ -11,7 +11,7 @@
   <div class="row justify-content-center">
     <div class="col-7">
       <div class="row text-center">
-      <div class="card difficulty-container shadow-lg px-3">
+      <div class="card difficulty-container shadow-lg px-3 bg-dark text-white">
         <div class="card-body pb-5">
           <h4 class="card-title text-center">Settings - Set AI difficulty</h4>
           <div class="card-body">
