--- a/templates/game.html
+++ b/templates/game.html
@@ -16,6 +16,7 @@
       </div>
     </main>
   </div>
+  <button onclick="download_csv_file()"> Download CSV </button>  
 {% endblock %}
 
 {% block scripts %}
